--- a/sales.html
+++ b/sales.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Salmon Cookies</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Salmon Cookies Sales</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -17,44 +18,21 @@
     </header>
 
     <div class="sales-data">
-        <div id="seattle-sales">
-            <h2>Seattle</h2>
-            <ul id="seattle-sales-list">
-                <!-- Sales data for Seattle will be inserted here -->
-            </ul>
-        </div>
-
-        <div id="tokyo-sales">
-            <h2>Tokyo</h2>
-            <ul id="tokyo-sales-list">
-                <!-- Sales data for Tokyo will be inserted here -->
-            </ul>
-        </div>
-
-        <div id="dubai-sales">
-            <h2>Dubai</h2>
-            <ul id="dubai-sales-list">
-                <!-- Sales data for Dubai will be inserted here -->
-            </ul>
-        </div>
-
-        <div id="paris-sales">
-            <h2>Paris</h2>
-            <ul id="paris-sales-list">
-                <!-- Sales data for Paris will be inserted here -->
-            </ul>
-        </div>
-
-        <div id="lima-sales">
-            <h2>Lima</h2>
-            <ul id="lima-sales-list">
-                <!-- Sales data for Lima will be inserted here -->
-            </ul>
-        </div>
+        <h2>Sales Data</h2>
+        <table id="sales-table">
+            <thead>
+                <tr>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Sales data for all stores will be inserted here -->
+            </tbody>
+        </table>
     </div>
 
     <footer> Trying to figure this out.</footer>
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
