lab07 table totals

--- a/sales.html
+++ b/sales.html
@@ -17,18 +17,8 @@
         </nav>
     </header>
 
-    <div class="sales-data">
-        <h2>Sales Data</h2>
-        <table id="sales-table">
-            <thead>
-                <tr>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Sales data for all stores will be inserted here -->
-            </tbody>
-        </table>
+    <div class="sales-data" id="sales-table-container"> <!-- Add an ID here -->
+        <!-- Table will be inserted here -->
     </div>
 
     <footer> Trying to figure this out.</footer>
