--- a/sales.html
+++ b/sales.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="./index.html" title="Home Page">Home</a></li>
                 <li><a href="./sales.html" title="Sales Data">Sales</a></li>
+                <li><a href="./form.html" title="Complete The Following Form">Form</a></li>
             </ul>
         </nav>
     </header>
